@@ -18,5 +18,5 @@ void do_open_small(void);
 void do_close_small(void);
 void do_chkinout(int);
 
-void do_load_lowlevel(fs64_file *loadfile, int startaddr);
-void do_verify_lowlevel(fs64_file *loadfile, int startaddr);
+void do_load_lowlevel(fs64_file *loadfile, int *startaddr);
+void do_verify_lowlevel(fs64_file *loadfile, int *startaddr);
